# polytris

./: .gitignore  .gitmodules  AGENTS.md  CYTHON_BUILD.md  Dockerfile  PLAN.md  README.md  README_runtime_analysis.md  build_cython.sh  configuration.json  dock  docker-compose.base.yml  docker-compose.yml  dpython  environment.yml  epoch_test_losses.json  epoch_train_losses.json  exclude.xml  masks.xml  pack-and-inference.py  paper  prepare_proxy_train.py  pyproject.toml  requirements.dev.txt  requirements.txt  run  run-scripts.sh  setup-dev.sh  setup.py  setup_cython.py  slice_image.py  sync  test-new-caldot.ipynb  test_apply_image.py  test_classifier_perf.py  test_runtime_analysis.py  track-skip-benchmark.ipynb  track.py  util-display-video.ipynb  visualize-caldot.ipynb
.claude/: settings.local.json
.cursor/: hooks.json
assets/: slice_image.py
configs/: create-gcp-instance.py  detectors.yaml  global-caldot1.yaml  global-caldot1.yml  global-caldot2.yaml  global.json  global.yaml  retinanet.json  sync.yaml  trackers.json  trackers.yaml
copy/: from-otif-source.sh  relevancy.sh
detection_experiments/: README.md  test_yolov5_speed.py
evaluation/: ablation.py  manifests.py  p003_tile_irrelevance_visualize.py  p004_polyomino_vs_roi_visualize.py  p004_preprocess_groundtruth_render.py  p005_preprocess_diff_render.py  p013_tune_optimize_classifier.py  p015_tune_select_classifier.py  p016_track_rate_visualize.py  p017_mistrack_variance.py  p022_exec_classify_visualize.py  p023_exec_classify_render.py  p024_exec_classify_tradeoff.py  p025_exec_pruning_tradeoff.py  (+36 more)
(+543 files in other folders)
